Fix overflow on loaded site because side scroller was showing.

--- a/_/css/less/global.less
+++ b/_/css/less/global.less
@@ -50,7 +50,11 @@ min-height: 100%;
 	}
 	
 	&.loaded {
-	overflow: auto;	
+	overflow-y: auto;
+	overflow-x: hidden;	
+		@media screen and (max-width: 1200px){
+		overflow-x: auto;	
+		}
 	}
 	
 	&.modal-open {
