--- a/_/css/styles.css
+++ b/_/css/styles.css
@@ -5558,7 +5558,13 @@ body.loading #quick-links-sml {
   left: -70px;
 }
 body.loaded {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+@media screen and (max-width: 1200px) {
+  body.loaded {
+    overflow-x: auto;
+  }
 }
 body.modal-open {
   overflow: hidden;
